[gd_scene load_steps=2 format=3 uid="uid://ci2col70bog6f"]

[ext_resource type="Script" uid="uid://12x5njnb1cls" path="res://scripts/hub_menu.gd" id="1_pg5m2"]

[node name="HubMenu" type="Node2D"]
script = ExtResource("1_pg5m2")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 382.0
offset_top = 75.0
offset_right = 478.0
offset_bottom = 345.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Battle" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Battle"

[node name="Upgrade" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Upgrade"

[node name="Shop" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Shop"

[node name="Main Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Battle" to="." method="_on_battle_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
